# food-app

./: README.md
backend/: .env-sample  Cargo.toml
backend/src/: main.rs
backend/src/config/: db.rs
frontend/: package-lock.json  package.json
