[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bson = { version = "2.11.0", features = ["chrono-0_4"] }
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
mongodb = { version = "3.1.0", features = ["zstd-compression", "snappy-compression", "zlib-compression"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = "3.9.0"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "set-header", "timeout", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
